maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:23: error: illegal start of simple expression
} 
^